k8s/manifests/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedbackhub-svc
spec:
  type: NodePort
  selector:
    app: feedbackhub-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedbackhub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedbackhub-pod
  template:
    metadata:
      labels:
        app: feedbackhub-pod
    spec:
      containers:
        - name: feedbackhub
          image: sivaprasadreddy/feedbackhub
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 240
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 240
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
