k8s/manifests/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedbackhub-postgres-svc
spec:
  selector:
    app: feedbackhub-postgres-pod
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedbackhub-postgres-deployment
spec:
  selector:
    matchLabels:
      app: feedbackhub-postgres-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: feedbackhub-postgres-pod
    spec:
      containers:
        - name: postgres
          image: "postgres:18-alpine"
          ports:
            - name: postgres
              containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 45
            timeoutSeconds: 2
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: feedbackhub-postgres-pv-claim
