k8s/manifests/mailpit.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedbackhub-mailpit-svc
spec:
  selector:
    app: feedbackhub-mailpit-pod
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: http
      port: 8025
      targetPort: 8025
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedbackhub-mailpit-deployment
spec:
  selector:
    matchLabels:
      app: feedbackhub-mailpit-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: feedbackhub-mailpit-pod
    spec:
      containers:
        - name: mailpit
          image: "axllent/mailpit:v1.31"
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
